--- a/app/templates/input.html
+++ b/app/templates/input.html
@@ -1,63 +1,92 @@
 {% extends 'base.html' %}
 {% block title %}
-    录入成绩
+  录入成绩
 {% endblock %}
 {% block body %}
-    <div class="input-group">
-        <span class="input-group-addon" id="basic-addon1">考试名称</span>
-        <input type="text" class="form-control" placeholder="例如 高一第一学期期中考试" aria-describedby="basic-addon1">
-    </div>
-    <br>
-    <table class="table table-bordered" id="score">
-        <thead>
-        <tr>
-            <th>学号</th>
-            <th>姓名</th>
-            <th>语文</th>
-            <th>数学</th>
-            <th>英语</th>
-            <th>物理</th>
-            <th>化学</th>
-            <th>生物</th>
-            <th>历史</th>
-            <th>政治</th>
-            <th>地理</th>
-            <th>三门总分</th>
-            <th>三门班级排名</th>
-            <th>三门年级排名</th>
-            <th>五门总分</th>
-            <th>五门班级排名</th>
-            <th>五门年级排名</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for n in range(1,45) %}
-            <tr class="score">
-                <th scope="row">{{ n }}</th>
-                <td>沈宗存</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td contenteditable>{{ range(60, 100) | random }}</td>
-                <td>-</td>
-                <td>-</td>
-                <td contenteditable>0</td>
-                <td>-</td>
-                <td>-</td>
-                <td contenteditable>0</td>
-            </tr>
+  <div class="input-group">
+    <span class="input-group-addon" id="basic-addon1">考试名称</span>
+    <input id="exam-name" type="text" class="form-control" placeholder="例如 高一第一学期期中考试" aria-describedby="basic-addon1" value="{{ exam.name }}">
+    <input type="text" id="exam-id" style="display: none" value="{{ exam.id }}">
+  </div>
+  <br>
+  <table class="table table-bordered" id="score">
+    <thead>
+    <tr>
+      <th>学号</th>
+      <th>姓名</th>
+      <th>语文</th>
+      <th>数学</th>
+      <th>英语</th>
+      <th>物理</th>
+      <th>化学</th>
+      <th>生物</th>
+      <th>历史</th>
+      <th>政治</th>
+      <th>地理</th>
+      <th>三门总分</th>
+      <th>三门班级排名</th>
+      <th>三门年级排名</th>
+      <th>五门总分</th>
+      <th>五门班级排名</th>
+      <th>五门年级排名</th>
+    </tr>
+    </thead>
+    <tbody>
+    {% if scores %}
+      {% for student in students['students'] %}
+        {% for score in scores if score.student_id == student.id %}
+          <tr class="score">
+            <th class="student-id" scope="row">{{ student.student_id }}</th>
+            <td class="student_id" style="display: none">{{ student.id }}</td>
+            <td class="student-name">{{ student.name }}</td>
+            <td class="yw" contenteditable>{{ score.yw }}</td>
+            <td class="sx" contenteditable>{{ score.sx }}</td>
+            <td class="yy" contenteditable>{{ score.yy }}</td>
+            <td class="wl" contenteditable>{{ score.wl }}</td>
+            <td class="hx" contenteditable>{{ score.hx }}</td>
+            <td class="sw" contenteditable>{{ score.sw }}</td>
+            <td class="ls" contenteditable>{{ score.ls }}</td>
+            <td class="zz" contenteditable>{{ score.zz }}</td>
+            <td class="dl" contenteditable>{{ score.dl }}</td>
+            <td class="sum_3">{{ score.sum_3 }}</td>
+            <td class="class_rank_3">{{ score.class_rank_3 }}</td>
+            <td class="grade_rank_3" contenteditable>{{ score.grade_rank_3 }}</td>
+            <td class="sum_5">{{ score.sum_5 }}</td>
+            <td class="class_rank_5">{{ score.class_rank_5 }}</td>
+            <td class="grade_rank_5" contenteditable>{{ score.grade_rank_5 }}</td>
+          </tr>
         {% endfor %}
-        </tbody>
-    </table>
-    <button class="btn btn-default" id="calc" type="submit">计算</button>
-    <button class="btn btn-default" type="submit">确定</button>
-    <br>
+      {% endfor %}
+    {% else %}
+      {% for student in students['students'] %}
+          <tr class="score">
+            <th class="student-id" scope="row">{{ student.student_id }}</th>
+            <td class="student_id" style="display: none">{{ student.id }}</td>
+            <td class="student-name">{{ student.name }}</td>
+            <td class="yw" contenteditable>0</td>
+            <td class="sx" contenteditable>0</td>
+            <td class="yy" contenteditable>0</td>
+            <td class="wl" contenteditable>0</td>
+            <td class="hx" contenteditable>0</td>
+            <td class="sw" contenteditable>0</td>
+            <td class="ls" contenteditable>0</td>
+            <td class="zz" contenteditable>0</td>
+            <td class="dl" contenteditable>0</td>
+            <td class="sum_3">0</td>
+            <td class="class_rank_3">0</td>
+            <td class="grade_rank_3" contenteditable>0</td>
+            <td class="sum_5">0</td>
+            <td class="class_rank_5">0</td>
+            <td class="grade_rank_5" contenteditable>0</td>
+          </tr>
+      {% endfor %}
+    {% endif %}
+    </tbody>
+  </table>
+  <button class="btn btn-default" id="calc" type="submit">计算</button>
+  <button class="btn btn-default" id="submit">确定</button>
+  <br>
 {% endblock %}
 {% block script %}
-    <script src="{{ url_for('static', filename='scripts/input.js') }}"></script>
+  <script src="{{ url_for('static', filename='scripts/input.js') }}"></script>
 {% endblock %}
