add flask sticker

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,15 @@
 
 {% endblock %}
 
+{% block content %}
+
+    {{ super() }}
+
+    <a href="http://flask.pocoo.org/"><img src="http://flask.pocoo.org/static/badges/made-with-flask-s.png" border="0"
+                                           alt="made with Flask" title="made with Flask"></a>
+
+{% endblock %}
+
 {% block scripts %}
 
     {{ super() }}
