remove base tpl from two grade pages

--- a/app/templates/history_grade.html
+++ b/app/templates/history_grade.html
@@ -1,33 +1,34 @@
-{% extends "base.html" %}
-
-{% block body %}
 
     {% if scores %}
 
         {% for score in scores %}
 
-                语文{{ score.yw }}
-                数学{{ score.sx }}
-                英语{{ score.yy }}
-                物理{{ score.wl }}
-                化学{{ score.hx }}
-                生物{{ score.sw }}
-                历史{{ score.ls }}
-                地理{{ score.dl }}
-                政治{{ score.zz }}
-                三门总分{{ score.sum_3 }}
-                五门总分{{ score.sum_5 }}
-                三门班级排名{{ score.class_rank_3 }}
-                五门班级排名{{ score.class_rank_5 }}
-                三门年纪排名{{ score.grade_rank_3 }}
-                五门年纪排名{{ score.grade_rank_5 }}
-                考试名称{{ score.exam.name }}
-                考试时间{{ score.exam.create_time }}
+
+    {% if score %}
+        学生姓名:{{ score.student.name }}<br>
+        学生学号:{{ score.student.student_id }}<br>
+        考试名称{{ score.exam.name }}<br>
+        考试时间{{ score.exam.create_time }}<br>
+        语文:{{ score.yw }} 班级平均分:{{ score.exam.yw_av }}<br>
+        数学:{{ score.sx }} 班级平均分:{{ score.exam.sx_av }}<br>
+        英语:{{ score.yy }} 班级平均分:{{ score.exam.yy_av }}<br>
+        物理:{{ score.wl }} 班级平均分:{{ score.exam.wl_av }}<br>
+        化学:{{ score.hx }} 班级平均分:{{ score.exam.hx_av }}<br>
+        生物:{{ score.sw }} 班级平均分:{{ score.exam.sw_av }}<br>
+        历史:{{ score.ls }} 班级平均分:{{ score.exam.ls_av }}<br>
+        地理:{{ score.dl }} 班级平均分:{{ score.exam.dl_av }}<br>
+        政治:{{ score.zz }} 班级平均分:{{ score.exam.zz_av }}<br>
+        三门总分{{ score.sum_3 }}<br>
+        三门班级排名{{ score.class_rank_3 }}<br>
+        三门年级排名{{ score.grade_rank_3 }}<br>
+        五门总分{{ score.sum_5 }}<br>
+        五门班级排名{{ score.class_rank_5 }}<br>
+        五门年级排名{{ score.grade_rank_5 }}<br>
+
+    {% endif %}
 
             =================================================
 
         {% endfor %}
 
     {% endif %}
-
-{% endblock %}
