--- a/app/templates/auth.html
+++ b/app/templates/auth.html
@@ -31,7 +31,7 @@
   <script>
     $(document).ready(function () {
       $('#yes').click(function () {
-        document.location.href = '/profile?owner={{ owner }}&user={{ user }}'
+        document.location.href = '/profile/{{ user.id }}'
       });
     });
   </script>
