add stand score

--- a/app/templates/current_grade.html
+++ b/app/templates/current_grade.html
@@ -13,6 +13,9 @@
         历史:{{ score.ls }} 班级平均分:{{ score.exam.ls_av }}<br>
         地理:{{ score.dl }} 班级平均分:{{ score.exam.dl_av }}<br>
         政治:{{ score.zz }} 班级平均分:{{ score.exam.zz_av }}<br>
+        语文标准分:{{ score.yw_stand }}
+        数学标准分:{{ score.sx_stand }}
+        英语标准分:{{ score.yy_stand }}
         三门总分{{ score.sum_3 }}<br>
         三门班级排名{{ score.class_rank_3 }}<br>
         三门年级排名{{ score.grade_rank_3 }}<br>
