--- a/app/templates/input.html
+++ b/app/templates/input.html
@@ -23,6 +23,9 @@
       <th>历史</th>
       <th>政治</th>
       <th>地理</th>
+        <th>语文标准分</th>
+        <th>数学标准分</th>
+        <th>英语标准分</th>
       <th>三门总分</th>
       <th>三门班级排名</th>
       <th>三门年级排名</th>
@@ -49,6 +52,9 @@
             <td class="ls" contenteditable>{{ score.ls }}</td>
             <td class="zz" contenteditable>{{ score.zz }}</td>
             <td class="dl" contenteditable>{{ score.dl }}</td>
+              <td contenteditable>{{ score.yw_stand }}</td>
+              <td contenteditable>{{ score.sx_stand }}</td>
+              <td contenteditable>{{ score.yy_stand }}</td>
             <td class="sum_3">{{ score.sum_3 }}</td>
             <td class="class_rank_3">{{ score.class_rank_3 }}</td>
             <td class="grade_rank_3" contenteditable>{{ score.grade_rank_3 }}</td>
@@ -73,6 +79,9 @@
             <td class="ls" contenteditable>0</td>
             <td class="zz" contenteditable>0</td>
             <td class="dl" contenteditable>0</td>
+              <td contenteditable>0</td>
+              <td contenteditable>0</td>
+              <td contenteditable>0</td>
             <td class="sum_3">0</td>
             <td class="class_rank_3">0</td>
             <td class="grade_rank_3" contenteditable>0</td>
